Modified MSPFormatmetabolite parser to create a sensible ID. Added bipace and modified bipace2d pipelines. These should best be used on peak lists / condensed peak lists.